criação app drumkit

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bateria</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/css/style.css" />
 </head>
 <body>
     <h1>Mini DrumKit</h1>
@@ -30,16 +30,16 @@
 
     <footer></footer>
 
-    <audio id="s_keyq" src="sounds/keyq.wav"></audio>
-    <audio id="s_keyw" src="sounds/keyw.wav"></audio>
-    <audio id="s_keye" src="sounds/keye.wav"></audio>
-    <audio id="s_keya" src="sounds/keya.wav"></audio>
-    <audio id="s_keys" src="sounds/keys.wav"></audio>
-    <audio id="s_keyd" src="sounds/keyd.wav"></audio>
-    <audio id="s_keyz" src="sounds/keyz.wav"></audio>
-    <audio id="s_keyx" src="sounds/keyx.wav"></audio>
-    <audio id="s_keyc" src="sounds/keyc.wav"></audio>
+    <audio id="s_keyq" src="../static/sounds/keyq.wav"></audio>
+    <audio id="s_keyw" src="../static/sounds/keyw.wav"></audio>
+    <audio id="s_keye" src="../static/sounds/keye.wav"></audio>
+    <audio id="s_keya" src="../static/sounds/keya.wav"></audio>
+    <audio id="s_keys" src="../static/sounds/keys.wav"></audio>
+    <audio id="s_keyd" src="../static/sounds/keyd.wav"></audio>
+    <audio id="s_keyz" src="../static/sounds/keyz.wav"></audio>
+    <audio id="s_keyx" src="../static/sounds/keyx.wav"></audio>
+    <audio id="s_keyc" src="../static/sounds/keyc.wav"></audio>
     
-    <script src="script.js"></script>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
